# MPItest

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  mpi-test-c.c  mpi-test-cxx.cxx  mpi-test-mpi-f90.f90  mpi-test-mpi_f08-f90.f90  mpi-test-mpif-f-c.c  mpi-test-mpif-f.f  mpi-test-mpif-f90.f90  mpi-test-suite-debian.dockerfile  test-amd64-debian-mpich.dockerfile  test-amd64-debian-openmpi.dockerfile  test-arm32v5-debian-mpich.dockerfile  test-arm32v5-debian-mpich.dockerfile.broken  test-arm32v5-debian-openmpi.dockerfile.broken  test-arm32v5-debian.dockerfile  test-arm32v7-debian-mpich.dockerfile  test-arm32v7-debian-openmpi.dockerfile.broken  test-arm32v7-debian.dockerfile  test-arm64v8-debian-mpich.dockerfile  test-arm64v8-debian-openmpi.dockerfile  test-arm64v8-debian.dockerfile  test-bluewaters.sh  test-debian-11.0.dockerfile  test-graham.sh  test-i386-debian-11.0.dockerfile  test-i386-debian-mpich.dockerfile  test-i386-debian-openmpi.dockerfile.broken  test-i386-debian-testing.dockerfile  test-marconi.sh  test-mips64le-debian-mpich.dockerfile  test-mips64le-debian-openmpi.dockerfile  test-mips64le-debian.dockerfile  test-niagara.sh  test-ppc64le-debian-mpich.dockerfile  test-ppc64le-debian-openmpi.dockerfile  (+8 more)
.github/workflows/: CI.yml
test-docker/: README.md  mpi-test-suite-debian.dockerfile  mpi-test-suite-debian.sh  mpi-test-suite-ubuntu.dockerfile  mpi-test-suite.sh  test-arm32v5-debian-openmpi.dockerfile.broken  test-arm32v7-debian-mpich.dockerfile  test-mips64le-debian-mpich.dockerfile  test-ppc64le-debian-mpich.dockerfile  test-ubuntu-20.04.dockerfile
test-docker/old/: test-amd64-debian-mpich.dockerfile  test-amd64-debian-openmpi.dockerfile  test-arm32v5-debian-mpich.dockerfile.broken  test-arm32v5-debian-openmpi.dockerfile.broken  test-arm32v7-debian-mpich.dockerfile  test-arm32v7-debian-openmpi.dockerfile.broken  test-arm64v8-debian-mpich.dockerfile  test-arm64v8-debian-openmpi.dockerfile  test-i386-debian-mpich.dockerfile  test-i386-debian-openmpi.dockerfile.broken  test-mips64le-debian-mpich.dockerfile  test-mips64le-debian-openmpi.dockerfile  test-ppc64le-debian-mpich.dockerfile  test-ppc64le-debian-openmpi.dockerfile  test-riscv64-debian-mpich.dockerfile.broken  test-riscv64-debian-openmpi.dockerfile
test-systems/: test-cori.sh  test-graham.sh  test-marconi.sh  test-niagara.sh  test-redshift.sh  test-summit.sh  test-symmetry.sh
tests-docker/: mpi-test-suite-debian.dockerfile  test-amd64-debian-mpich.dockerfile  test-arm32v7-debian-openmpi.dockerfile.broken  test-i386-debian-mpich.dockerfile  test-ppc64le-debian-openmpi.dockerfile  test-ubuntu-20.04.dockerfile
